--- a/Site Institucional/Estático/PaginaInicial/home.css
+++ b/Site Institucional/Estático/PaginaInicial/home.css
@@ -2,12 +2,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;700&display=swap');
 
-@font-face {
-    font-family: "Press Gothic";
-    src: url("//db.onlinewebfonts.com/t/d0a687dd2a0803f486cde808245bd3c5.eot");
-    src: url("//db.onlinewebfonts.com/t/d0a687dd2a0803f486cde808245bd3c5.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/d0a687dd2a0803f486cde808245bd3c5.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/d0a687dd2a0803f486cde808245bd3c5.woff") format("woff"), url("//db.onlinewebfonts.com/t/d0a687dd2a0803f486cde808245bd3c5.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/d0a687dd2a0803f486cde808245bd3c5.svg#Press Gothic") format("svg");
-}
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+* {
+    -webkit-font-smoothing: antialiased;
+}
 body {
     height: 100vh;
     width: 100%;
@@ -32,7 +31,7 @@ body {
     height: 100%;
     background-size: 122%;
     background-position: 0% 20%;
-    background-image: url('./assets/8879118.jpg');
+    background-image: url('./assets/8879118.webp');
 }
 
 .container{
@@ -40,8 +39,46 @@ body {
     width: 90vw;
     margin-left: 5%;
 }
+/* Header Fixa */
+#headerinfinitaFundo{
+    display: none;
+    position: fixed;
+    width: 100vw;
+    height: 6.5vh;
+    background-color: #fc9802ee;
+}
 
-.header {
+.headerinfinita {
+    display: flex;
+    width: 90vw;
+    height: 6.5vh;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5%;
+}
+
+#noticiastextoInfinito{
+    cursor: pointer;
+    color: white;
+}
+
+#jogostextoInfinito{
+    display: flex;
+    cursor: pointer;
+    color: white;
+    align-items: center;
+}
+
+#serietextoInfinito{
+    display: flex;
+    cursor: pointer;
+    color: white;
+    align-items: center;
+}
+
+
+/* Header Normal */
+#header {
     display: flex;
     width: 90vw;
     height: 10vh;
@@ -53,7 +90,6 @@ body {
     font-family: "Press Gothic";
     font-size: 32px;
     color: white;
-    margin-top: 1%;
     width: 13%;
 }
 
@@ -68,39 +104,108 @@ body {
 
 .navbar {
     display: flex;
-    align-items: center;
-    margin-top: 1%;
     width: 100%;
     height: 100%;
-}
-
-.navbar span {
-    display: inline-flex;
-    margin-left: 6.5%;
+    margin-right: 5%;
 }
 
 #textonavbar {
     display: flex;
-    height: 100%;
-    width: 100%;
     align-items: center;
-    color: white;
-    font-family: 'Space Grotesk';
-    font-size: 1vmax;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    font-family: 'Outfit', sans-serif;
+    font-size: 0.9vmax;
     line-height: 19px;
-    font-style: normal;
-
+    letter-spacing: 0px;
     white-space: nowrap;
-    font-weight: 500;
+    font-weight: 600;
+    gap: 5%;
+}
+
+/* HOMEPAGE */
+.homepage{
+    display: flex;
+    height: 30%;
+    flex-direction: column;
     justify-content: flex-end;
+}
+#homepagetexto{
+    display: flex;
+    color: #ffe70c;
+}
+/*NOTICIAS*/
+.noticias{
+    display: flex;
+    height: 30%;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: flex-end;
+    box-sizing: border-box;
+}
+#noticiastexto{
+    cursor: pointer;
+    color: white;
+}
+
+#noticiaslinha{
+    display: flex;
+    opacity: 0;
+    background-color: #FDC706;
+    width: 0%;
+    height: 10%;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+/* JOGOS */
+.jogos{
+    display: flex;
+    height: 30%;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    box-sizing: border-box;
+}
+#jogostexto{
+    display: flex;
+    cursor: pointer;
+    color: white;
+    align-items: center;
+}
+#jogoslinha{
+    display: flex;
+    opacity: 0;
+    background-color: #FDC706;
+    width: 0%;
+    height: 10%;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+/* Serie */
+.serie{
+    display: flex;
+    height: 30%;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    box-sizing: border-box;
+}
+#serietexto{
+    display: flex;
+    cursor: pointer;
+    color: white;
+    align-items: center;
 }
 
 #iconNavbar {
-    margin-left: -2%;
+    margin-left: -5%;
+    width: 10%;
     align-items: center;
     font-size: 18px;
 }
-
 .footer{
     display: flex;
     width: 100%;
@@ -116,4 +221,29 @@ body {
     font-family: 'Space Grotesk';
     font-size: 0.8vmax;
     text-align: center;
+}
+
+@keyframes historiaA {
+    from {width: 20vh; height: 20vh;}
+    to {width: 20vh; height: 21vh;}
+}
+
+@keyframes navbarON {
+    0% {opacity: 0; width: 0%;}
+    to {opacity: 1; width: 100%;}
+}
+
+@keyframes navbarOFF {
+    0% {opacity: 1; width: 100%;}
+    to {opacity: 0; width: 0%;}
+}
+
+@keyframes ondeA {
+    0% {opacity: 0; width: 0%;}
+    to {opacity: 1; width: 60%;}
+}
+
+@keyframes ondeAReverse {
+    0% {opacity: 1; width: 60%;}
+    to {opacity: 0; width: 0%;}
 }
