--- a/Site Institucional/Estático/PaginaInicial/tlou2.css
+++ b/Site Institucional/Estático/PaginaInicial/tlou2.css
@@ -16,7 +16,7 @@
     height: 100%;
     background-size: 150%;
     background-position: 3% 70%;
-    background-image: url('./assets/thumb-1920-1065466.png');
+    background-image: url('./assets/thumb-1920-1065466.webp');
     color: white;
 }
 
@@ -91,12 +91,19 @@
     display: flex;
     position: absolute;
     z-index: -1;
-    background-image: url(./assets/Diretor\ chorou\ com\ sucesso\ de\ The\ Last\ of\ Us\ 2\ \ este\ é\ um\ jogo\ da\ Naughty\ Dog...jpg);
+    background-image: url(./assets/Diretor-chorou-com-sucesso-de-The-Last-of-Us-2-este-é-um-jogo-da-Naughty-Dog...webp);
     background-size: cover;
     background-position: 40%;
     border-radius: 15px;
     width: 100%;
     height: 100%;
+}
+
+.blocoHistoriaGradienteTLOU2:hover {
+    animation-name: historiaA;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    cursor: pointer;
 }
 
 #blocoHistoriaTextoTLOU2 {
@@ -119,6 +126,13 @@
     width: 20vh;
     height: 20vh;
     background: linear-gradient(180deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.082) 60%);
+}
+
+.blocoPersonagemGradienteTLOU2:hover {
+    animation-name: historiaA;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    cursor: pointer;
 }
 
 .blocoPersonagemTLOU2{
@@ -207,7 +221,22 @@
     border-radius: 10px;
     background-color: #003791;
     align-items: center;
+    cursor: pointer;
 }
+
+#ondeAnimationPSNTLOU2{
+    display: flex;
+    opacity: 1;
+    width: 0%;
+    height: 100%;
+    margin-left: auto;
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+    background: linear-gradient(120deg, #003791 52.42%, #FDC706 53.21%);
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
 
 #psnicon {
     margin-left: 3%;
