--- a/Site Institucional/Estático/PaginaInicial/home.css
+++ b/Site Institucional/Estático/PaginaInicial/home.css
@@ -39,24 +39,7 @@ body {
     width: 90vw;
     margin-left: 5%;
 }
-/* Header Fixa */
-#headerinfinitaFundo{
-    display: none;
-    position: fixed;
-    width: 100vw;
-    height: 6.5vh;
-    background-color: #fc9802ee;
-}
-
-.headerinfinita {
-    display: flex;
-    width: 90vw;
-    height: 6.5vh;
-    align-items: center;
-    justify-content: center;
-    margin-left: 5%;
-}
-
+/* Texto Header Infinita */
 #noticiastextoInfinito{
     cursor: pointer;
     color: white;
@@ -75,55 +58,6 @@ body {
     color: white;
     align-items: center;
 }
-
-
-/* Header Normal */
-#header {
-    display: flex;
-    width: 90vw;
-    height: 10vh;
-    align-items: center;
-}
-
-#logo {
-    display: flex;
-    font-family: "Press Gothic";
-    font-size: 32px;
-    color: white;
-    width: 13%;
-}
-
-#logo2 {
-    display: flex;
-    font-family: "Press Gothic";
-    font-size: 32px;
-    color: #FDC706;
-    height: 10%;
-    width: 10%;
-}
-
-.navbar {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    margin-right: 5%;
-}
-
-#textonavbar {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    font-family: 'Outfit', sans-serif;
-    font-size: 0.9vmax;
-    line-height: 19px;
-    letter-spacing: 0px;
-    white-space: nowrap;
-    font-weight: 600;
-    gap: 5%;
-}
-
 /* HOMEPAGE */
 .homepage{
     display: flex;
