--- a/Site Institucional/Estático/PaginaInicial/tlouhbo.css
+++ b/Site Institucional/Estático/PaginaInicial/tlouhbo.css
@@ -19,30 +19,30 @@
     color: white;
 }
 
-.containerTLOUHBO{
+.containerTLOUHBO {
     height: 90vh;
     width: 90vw;
     margin-left: 5%;
     color: white;
 }
 
-.tituloJogoTLOUHBO{
+.tituloJogoTLOUHBO {
     display: flex;
     flex-direction: column;
     margin-top: 17.2%;
     width: 30%;
 }
 
-#numeroJogoTLOUHBO{
+#numeroJogoTLOUHBO {
     display: flex;
     color: #608103;
-    font-family: 'Space Grotesk';
+    font-family: 'Sora', sans-serif;
     font-weight: 700;
     font-style: normal;
     font-size: 1.4vmax;
 }
 
-#nomeJogoTLOUHBO{
+#nomeJogoTLOUHBO {
     display: flex;
     color: white;
     font-family: "Press Gothic";
@@ -50,7 +50,7 @@
     margin-top: -0.8%;
 }
 
-.sobreBlocoTLOUHBO{
+.sobreBlocoTLOUHBO {
     display: flex;
     position: absolute;
     background: linear-gradient(89.96deg, rgba(96, 129, 3, 0.25) 18.83%, rgba(43, 51, 20, 0.015) 84.16%);
@@ -61,7 +61,7 @@
     margin-left: -7%;
 }
 
-#sobreBlocoTextoTLOUHBO{
+#sobreBlocoTextoTLOUHBO {
     display: flex;
     color: white;
     font-family: 'Space Grotesk';
@@ -73,7 +73,7 @@
 }
 
 /* Blocos Sobrepondo o Banner */
-.blocoEpisodiosGradienteTLOUHBO{
+.blocoEpisodiosGradienteTLOUHBO {
     display: flex;
     position: absolute;
     justify-content: center;
@@ -92,6 +92,7 @@
     animation-fill-mode: forwards;
     cursor: pointer;
 }
+
 .blocoEpisodiosTLOUHBO {
     display: flex;
     position: absolute;
@@ -113,7 +114,7 @@
     font-size: 1.15vmax;
 }
 
-.containerTLOUinformativoTLOUHBO{
+.containerTLOUinformativoTLOUHBO {
     display: flex;
     height: 70vh;
     width: 90vw;
@@ -181,7 +182,7 @@
     cursor: pointer;
 }
 
-#ondeAnimationHBO{
+#ondeAnimationHBO {
     display: flex;
     opacity: 1;
     width: 0%;
@@ -199,7 +200,7 @@
     height: 55%;
 }
 
-#hbotexto{
+#hbotexto {
     color: white;
     margin-left: 5%;
     font-size: 1vmax;
